Work on Section 4

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1184,3 +1184,25 @@ author = "B. Andersson and G. Gustafson and G. Ingelman and T. Sjöstrand"
   journal = {Journal of Physics G: Nuclear and Particle Physics},
   abstract = {Several measurements of tree- and loop-level -hadron decays performed in the recent years hint at a possible violation of Lepton Universality. This article presents an experimental and theoretical overview of the current status of the field.}
 }
+
+@article{cmsglobaltrigger,
+author = {Brooke, James and Cussans, D and Frazier, Ricky and Heath, G and Machin, D and Newbold, D and Galagadera, S and Madani, Sadaf and Shah, Abid},
+year = {2019},
+month = {07},
+pages = {},
+title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
+}
+
+@article{Khachatryan_2017,
+  doi = {10.1088/1748-0221/12/01/p01020},
+  url = {https://doi.org/10.1088%2F1748-0221%2F12%2F01%2Fp01020},
+  year = 2017,
+  month = {jan},
+  publisher = {{IOP} Publishing},
+  volume = {12},
+  number = {01},
+  pages = {P01020--P01020},
+  author = {The CMS Collaboration},
+  title = {The {CMS} trigger system},
+  journal = {Journal of Instrumentation},
+}
