--- a/data/section4.tex
+++ b/data/section4.tex
@@ -32,13 +32,34 @@ The CMS Data Acquisition (DAQ) and trigger system was specifically designed to c
  The collision triggering the readout is called the primary vertex, while other collisions from the beams are called pile-up. Secondary vertices refer to those production points where particles are created from decay or hard-scattering of the particles associated with a particular primary vertex. This is shown in Figure \ref{fig:vertex}. Because higher energy collisions are more likely to produce something not yet seen, that makes them more interesting, so triggers are attuned to prefer higher momentum objects.
 
 \subsection{L1 Trigger and HLT}
- Whenever the LHC is performing at its peak, about one billion proton-proton interactions take place every second inside the CMS detector. The triggers system allows to record only a fraction of those events, hoping they are generated from energetic, head-on collisions.
+ Whenever the LHC is performing at its peak, about one billion proton-proton interactions take place every second inside the CMS detector. To select events of potential physics interest, the CMS trigger\cite{Khachatryan_2017} utilizes a two level system including a L1 hardware trigger and an HLT array of commercially available computers running high-level physics algorithms.
 
-Level 1 of the trigger is an extremely fast, hardware-based process that looks for simple signs of interesting physics, e.g. particles with a large amount of energy or in unusual combinations. The L1 trigger selects events at a rate of around 100 kHz within a time interval of 4$\mu$s. The next step is the HLT, which combines the information from different parts of the detector to recreate the entire event and send it to a farm of more than 1000 computers to filter out even more events, reducing the event rate to less than 1 kHz before recording them on tape.
+The first level (L1) of the CMS trigger is an extremely fast process that selects events containing candidate objects, e.g. ionization deposits consistent with a muon, or energy clusters consistent with an electron, photon, $\tau$ lepton, missing transverse energy ($E_{T}^{miss}$), or jet. In some cases, the scalar sum of the jet transverse momenta ($H_{T}$) is also used as a L1 candidate. During this process, only coarsely segmented data from calorimeter and muon detectors is used, while all the high-resolution data is held in pipeline memories in the front-end electronics.
+
+ The L1 trigger allows to store data for 3.2 $\mu$s, after which no more than 100 kHz of the stored events are forwarded to the next trigger system.  
+
+ \begin{figure}[h]
+ 	\centering
+ 	\includegraphics[width=0.75\textwidth]{figures/The-CMS-Level-1-Trigger.png}
+ 	\singlespace
+ 	\caption{The CMS Level-1 Trigger. Reprinted from \cite{cmsglobaltrigger}}
+ 	\label{fig:l1trig}
+ \end{figure}
+
+The event selection at the HLT is performed in a similar way to that used in the offline processing. For each event, objects such as electrons, muons, and jets are reconstructed and identification criteria are applied in order to select only those events which are of possible interest for data analysis.
+
+The data processing of the HLT is structured around the concept of a \textit{HLT path}, which is a set of algorithmic processing steps run in a predefined order that both reconstructs physics objects and makes selections on these objects. 
+
+The reconstruction modules and selection filters of the HLT use the software framework that is also used for offline reconstruction and analyses.
+
+Upon completion, an average rate of 400 Hz of accepted events are sent to another software process, called the storage manager, for archival storage. The event data are stored locally on disk and eventually transferred to the CMS Tier-0 computing center for offline processing and permanent storage.
+
 
 \subsection{T1 sites and data storage}
 
 CMS computing operates on a tiered computing structure. A Tier-0 computing center is located at CERN where the data is transferred form the HLT and a first set of reconstruction occurs. From there, it is transferred to one of seven Tier-1 computing centers located around the world. At the Tier-1 centers, a full reconstruction of the data is performed. Furthermore, there are 55 Tier-2 centers which can be accessed by the collaboration members for data processing and storage.
+
+The analysis presented here was performed at one of the Tier-3 centers, the Texas A$\&$M University Brazos HPC cluster. 
 
  \begin{figure}[H]
  	\centering
@@ -48,20 +69,20 @@ CMS computing operates on a tiered computing structure. A Tier-0 computing cente
  	\label{fig:datatier}
  \end{figure}
 
- The data itself is also processed in three data tiers. The first layer of this is the RAW data, which is created by unpacking detector streams passed on from the L1 and HLT triggers. It is typically composed of measurements from the different calorimeters, as well as some information provided by the L1 trigger. RAW data is then reconstructed into physics objects (i.e. muons, electrons, photons) that can be grouped later for further analysis. This step is called RECO, which is short for reconstruction and contains both the detector and physics object information. 
+ The data itself is also processed in three data tiers. The first layer of this is the RAW data, which is created by unpacking detector streams passed on from the L1 and HLT triggers. It is typically composed of measurements from the different subdetectors, as well as some information provided by the L1 trigger. RAW data is then reconstructed into PF objects, as explained in Section \ref{sec:track}. This step is called RECO, which is short for reconstruction and contains both the detector and physics object information. 
 
- After the RECO step, an \textit{analysis object data} (AOD) is generated from a subset of the RECO information. AOD objects are typically comprised of only high-level physics objects, making for much smaller files. Physics analysis are usually performed on data stored in this format.
+ After the RECO step, an \textit{analysis object data} (AOD) is generated from a subset of the RECO information. AOD objects are typically comprised of only high-level physics objects, making for much smaller files. 
 
 
 
 \section{Particle Flow Event Reconstruction}
 \label{sec:track}
 
-As mentioned in Section 2, CMS is one of the two general-purpose detectors at the LHC, and as such, it was designed based on the concept of cylindrical detection layers. In the previous section we described how data was managed and stored during the acquisition process. This section will focus on how physicists make sense of the raw detector information.  
+ In the previous section we described how data was managed and stored during the acquisition process. This section will focus on how raw detector information is interpreted.  
 
-First, detector data is measured in the form of electronic signals (hits in the tracker or energy depositions in the calorimeters). Then, the trajectories of charged particles, or tracks, are reconstructed from the position hits in the detector. From the collection of tracks in an event, the primary and any secondary vertices are reconstructed. 
+First, detector data is measured in the form of electronic signals (hits in the tracker or energy depositions in the calorimeters). Then, the trajectories of charged particles, or tracks, are reconstructed from the position hits in the tracker. From the collection of tracks in an event, the primary and any secondary vertices are reconstructed. 
 
-An optimal event description can be achieved by correlating the basic elements from all detector layers (tracks and clusters) to identify each final-state particle, and by combining the corresponding measurements to reconstruct the particle properties on the basis of this identification. At CMS, this approached is called \textit{particle-flow (PF) reconstruction}.
+An optimal event description can be achieved by correlating the basic elements from all subdetectors (tracks and clusters) to identify each final-state particle, and by combining the corresponding measurements to reconstruct the particle properties on the basis of this identification. At CMS, this approached is called \textit{particle-flow (PF) reconstruction}.
 
 The reconstructed and identified individual particle list includes muons, electrons, photons, as well as charged  and neutral hadrons. These particles can be non-isolated, and even originate from an intricate overlap of reconstructed charged particles, ECAL and HCAL energy clusters, and signals in the muon chambers.
 
@@ -73,11 +94,11 @@ The reconstructed and identified individual particle list includes muons, electr
  	\caption{Cross-sectional view of the CMS detector with all of the sub-detectors labeled. The colored lines correspond to different particle types. Each particle interacts with different pieces of the detector and may or may not be bent by the magnetic field. Reprinted from \cite{CMSSlice}}
  \end{figure}
 
-During PF reconstruction, photons and neutral hadrons are in general identified by ECAL and HCAL clusters with no track link. Electrons can be identified by a track and an ECAL cluster, with a momentum-to-energy ratio compatible with unity, and not connected to an HCAL cluster. Finally, muons and neutrinos would traverse the calorimeters with little or no interactions. While neutrinos would escape undetected, muons would be identified by a track in the inner tracker connected to a track in the muon detectors. See Figure \ref{fig:cmsslice}.
+During PF reconstruction, photons and neutral hadrons are identified by ECAL and HCAL clusters with no associated tracks. Electrons can be identified by associating a track to an ECAL cluster, with a momentum-to-energy ratio compatible with unity, and not connected to an HCAL cluster. Finally, muons and neutrinos would traverse the calorimeters with little or no interactions. While neutrinos would escape undetected, muons would be identified by a track in the inner tracker connected to a track in the muon detectors. See Figure \ref{fig:cmsslice}.
 
-The PF concept was developed and used for the first time by the ALEPH experiment at LEP\cite{BUSKULIC1995481} and can now be used in hadron colliders due to the very fine spatial granularity of the detectors. In particular, CMS is very well suited for PF reconstruction due to its highly-segmented tracker,  a fine-grained ECAL, and an hermetic HCAL.
+The PF concept was developed and used for the first time by the ALEPH experiment at LEP\cite{BUSKULIC1995481}. In particular, CMS is very well suited for PF reconstruction due to its highly-segmented tracker,  a fine-grained ECAL, and an hermetic HCAL.
 
-Also, the CMS magnet is large enough to accommodate the tracker and both the ECAL and HCAL, thereby minimizing the amount of material in front of the calorimeters. This particular feature is an advantage for PF reconstruction, as it eliminates the energy losses before the calorimeters caused by particles showering in the coil material and facilitates the link between tracks and calorimeter clusters.
+Also, the CMS magnet is large enough to accommodate the tracker and both the ECAL and HCAL, thereby minimizing the amount of material in front of the calorimeters. This particular feature is an advantage for PF reconstruction, as it eliminates the energy losses before the calorimeters caused by particles showering in the coil material and makes it easier to link tracks and calorimeter clusters.
 
 \subsection{Iterative Tracking}
 
@@ -85,7 +106,7 @@ The first step of the reconstruction process is referred to as local reconstruct
 
 The tracking software at CMS\cite{TRK-11-001} is commonly referred to as the combinatorial Track Finder (CTF), which is an adaptation of the combinatorial Kalman Filter \cite{Billoir:1989mh,BILLOIR1990219,Mankel:1997dy}, which in turn is an extension of the Kalman filter\cite{Fruhwirth:1987fm} to allow pattern recognition and track fitting to occur in the same framework. The collection of reconstructed tracks is produced by multiple passes or iterations of the same CTF track reconstruction sequence, in a process called iterative tracking. 
 
-The basic idea of iterative tracking is that tracks of relatively large $p_{T}$ and those produced near the interaction region (which are relatively easy to find compare to those that are not) are searched for during the initial iteration. During successive iterations, hits associated with tracks discarded due to a specific selection criteria are removed. By doing so, the combinatorial complexity is reduced, and subsequent iterations searching for more difficult types of tracks (e.g., low $p_{T}$, or greatly displaced tracks) is simplified.
+The basic idea of iterative tracking is that tracks of relatively large $p_{T}$ and those produced near the interaction region (which are relatively easy to find compare to those that are not) are searched for during the initial iteration. During successive iterations, hits associated with tracks discarded due to specific selection criteria are removed. By doing so, the combinatorial complexity is reduced, and subsequent iterations searching for more difficult types of tracks (e.g., low $p_{T}$, or greatly displaced tracks) is simplified.
 
 Each iteration proceeds in four steps:
 
