Final A modifications to Chapter 4

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1206,3 +1206,17 @@ title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
   title = {The {CMS} trigger system},
   journal = {Journal of Instrumentation},
 }
+
+@article{Binder_1997,
+  doi = {10.1088/0034-4885/60/5/001},
+  url = {https://doi.org/10.1088%2F0034-4885%2F60%2F5%2F001},
+  year = 1997,
+  month = {may},
+  publisher = {{IOP} Publishing},
+  volume = {60},
+  number = {5},
+  pages = {487--559},
+  author = {K Binder},
+  title = {Applications of Monte Carlo methods to statistical physics},
+  journal = {Reports on Progress in Physics},
+}
