First pass at Denis' comments

--- a/data/myReference.bib
+++ b/data/myReference.bib
@@ -1220,3 +1220,10 @@ title = {Hardware and Firmware for the CMS Global Calorimeter Trigger}
   title = {Applications of Monte Carlo methods to statistical physics},
   journal = {Reports on Progress in Physics},
 }
+
+@misc{brazosc,
+      collaboration        = "Academy for Advanced Telecommunications and Learning Technologies ",
+      title         = "{Brazos Computational Resource}",
+      year          = "2019",
+      howpublished  = "\url{http://brazos.tamu.edu/acknowledge.html}",
+}
