--- a/data/nomenclature.tex
+++ b/data/nomenclature.tex
@@ -32,6 +32,7 @@
 		BFF	&	Bottom Fermion Fusion\\	[2ex]
 		CERN & European Center for Nuclear Research\\ [2ex]
 		CMS	&	Compact Muon Solenoid\\	[2ex]		
+		CSV	&	Combined Secondary Vertex\\	[2ex]				
 		EMCAL & Electromagnetic Calorimeter\\ [2ex]
 		EW	&	Electroweak\\	[2ex]
 		EWSB	&	Electroweak Symmetry Breaking\\	[2ex]	
@@ -43,6 +44,7 @@
 		$\eta$ & Pseudorapidity\\ [2ex]
 		PF   & Particle Flow\\ [2ex]
 		$p_{T}$ & Transverse Momentum\\ [2ex]		
+		PV & Primary Vertex\\ [2ex]				
 		QCD	&	Quantum Chromodynamics\\	[2ex]
 		QED	&	Quantum Electrodynamics\\	[2ex]		
 		QFT	&	Quantum Field Theory\\	[2ex]
