some additions to nomenclature

--- a/data/nomenclature.tex
+++ b/data/nomenclature.tex
@@ -33,6 +33,7 @@
 		CERN & European Center for Nuclear Research\\ [2ex]
 		CMS	&	Compact Muon Solenoid\\	[2ex]		
 		CSV	&	Combined Secondary Vertex\\	[2ex]				
+		DAQ	&	Data Acquisition \\	[2ex]						
 		EMCAL & Electromagnetic Calorimeter\\ [2ex]
 		EW	&	Electroweak\\	[2ex]
 		EWSB	&	Electroweak Symmetry Breaking\\	[2ex]	
@@ -44,7 +45,8 @@
 		$\eta$ & Pseudorapidity\\ [2ex]
 		PF   & Particle Flow\\ [2ex]
 		$p_{T}$ & Transverse Momentum\\ [2ex]		
-		PV & Primary Vertex\\ [2ex]				
+		PU & Pile-up\\ [2ex]				
+		PV & Primary Vertex\\ [2ex]						
 		QCD	&	Quantum Chromodynamics\\	[2ex]
 		QED	&	Quantum Electrodynamics\\	[2ex]		
 		QFT	&	Quantum Field Theory\\	[2ex]
